--- a/js.html
+++ b/js.html
@@ -12,11 +12,13 @@
 
 
     <p id="demo"></p>
+    <p id="demo1"></p>
+    <p id="demo2"></p>
 
     <script>
         document.getElementById("demo").innerHTML = "Name: Onwuzama Israel";
-        document.getElementById("demo").innerHTML = "Height: 5'2ft";
-        document.getElementById("demo").innerHTML = "Country: Nigeria"
+        document.getElementById("demo1").innerHTML = "Height: 5'2ft";
+        document.getElementById("demo2").innerHTML = "Country: Nigeria"
 
     </script>
 </body>
